basic tweet style

--- a/app/views/hello_world/index.html.erb
+++ b/app/views/hello_world/index.html.erb
@@ -1,2 +1,2 @@
-<%= react_component("HelloWorldApp", props: { user: @user, tweets: @tweets }) %>
+<%= react_component("HelloWorldApp", props: render(template: '/hello_world/index.json.jbuilder')) %>
 
