fix routing bug

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,2 +1,2 @@
-<%= react_component("HelloWorldApp", props: render(template: '/tweets/index.json.jbuilder')) %>
+<%= react_component("TweetsApp", props: render(template: '/tweets/index.json.jbuilder')) %>
 
